Fix width of content1 text of page 1 on mobile

--- a/style.css
+++ b/style.css
@@ -352,8 +352,12 @@ width: 480px;
 }
 
 .nav{
-height: 0px;
 display: none
+}
+
+.content1 {
+  justify-content: center;
+  max-width: 100%;
 }
 
 }
